# GSyncing

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  release.yml
docs/: AI-HANDOFF.md  RELEASE.md  TAURI2-GOTCHAS.md
scripts/: smoke-test.mjs
src/: App.tsx  ErrorBoundary.tsx  main.tsx  store.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: crypto.rs  error.rs  lib.rs  logbus.rs  main.rs  model.rs  paths.rs  process_watch.rs  state.rs  stats.rs  tray.rs  watcher.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/storage/: mod.rs  rate.rs  retry.rs  s3.rs  webdav.rs
src-tauri/src/sync/: engine.rs  mod.rs  remote_lock.rs  scanner.rs  scheduler.rs  snapshot.rs
src/api/: err.ts  index.ts
src/components/: AboutModal.tsx  GameEditor.tsx  OnboardingWizard.tsx  ProgressBar.tsx  StorageBreakdown.tsx  SyncPreviewModal.tsx  UpdateChecker.tsx  VersionDrawer.tsx
src/data/: gamePresets.ts
src/pages/: GameLibrary.tsx  LogViewer.tsx  Settings.tsx  SyncStatus.tsx
src/types/: index.ts
